--- a/web/src/main/webapp/static/js/templates/runtime/search.hbs
+++ b/web/src/main/webapp/static/js/templates/runtime/search.hbs
@@ -1,13 +1,29 @@
-<li class="nav"><input title="Search by keyword" role="" class="searchField" name="keyword" placeholder="Search workflows" id="keyword" type="text"></li>
-<li class="limit-dropdown-container nav btn-group">
+<div>
+    <ul class="search-criteria">
+        <li class="nav"><input title="Search by keyword" role="" class="searchField" name="keyword" placeholder="Search workflows" id="keyword" type="text"></li>
+        <li class="limit-dropdown-container nav btn-group">
 
-</li>
-<li class="nav btn-group">
-    <a class="btn btn-link" href="#search" role="button" id="instanceSearchButton" type="submit">Search</a>
-</li>
-<li class="nav btn-group">
-    <a class="btn btn-link" href="#clear" role="button" id="instanceClearButton" type="button">Clear</a>
-</li>
-<li class="nav btn-group pull-right">
-    <a class="btn btn-link" href="#export" title="Export all results" id="exportButton" type="button">Export</a>
-</li>
+        </li>
+        <li class="nav btn-group">
+            <button class="btn btn-link" role="button" id="instanceSearchButton" type="submit">Search</button>
+        </li>
+        <li class="nav btn-group">
+            <a class="btn btn-link" href="#clear" role="button" id="instanceClearButton" type="button">Clear</a>
+        </li>
+        <li class="nav btn-group pull-right">
+            <a class="btn btn-link" href="#export" title="Export all results" id="exportButton" type="button">Export</a>
+        </li>
+    </ul>
+</div>
+<div>
+    <ul>
+        <li class="nav">
+            <div class="btn-group">
+                <button class="btn btn-small" type="button">Pending</button>
+                <button class="btn btn-small" type="button">Canceled</button>
+                <button class="btn btn-small" type="button">Completed</button>
+            </div>
+
+        </li>
+    </ul>
+</div>
