--- a/web/src/main/webapp/static/js/templates/runtime/limit-dropdown.hbs
+++ b/web/src/main/webapp/static/js/templates/runtime/limit-dropdown.hbs
@@ -1,5 +1,5 @@
 <div class="dropdown">
-    <a id="filter-button" class="btn btn-link dropdown-toggle" data-target="limit-dropdown" data-toggle="dropdown" role="button" type="button">
+    <a id="filter-button" class="btn btn-link btn-small dropdown-toggle" data-target="limit-dropdown" data-toggle="dropdown" role="button" type="button">
         Limit to
         <b class="caret"></b>
     </a>
