--- a/web/src/main/webapp/static/css/shared.css
+++ b/web/src/main/webapp/static/css/shared.css
@@ -19,8 +19,16 @@ h2 {
     display: none !important;
 }
 
+.limit-dropdown-container {
+    line-height: 14px;
+}
+
+.limit-dropdown-container .btn {
+    margin: 0px !important;
+}
+
 .main-content {
-    padding: 120px 50px 70px 50px;
+    padding: 110px 50px 70px 50px;
 }
 
 .main-footer {
@@ -29,9 +37,9 @@ h2 {
 
 .main-toolbar {
     background-color: whitesmoke;
-    border-bottom: 1px solid #CCC;
-    height: 100px;
+    height: 75px;
     overflow: visible;
+    margin: 0px;
     padding: 0px 20px;
     vertical-align: middle;
     zoom: 1;
@@ -43,21 +51,92 @@ h2 {
 
 .main-toolbar .search-criteria {
     clear:  both;
-    padding: 15px 0px 0px 0px;
+    padding: 5px 0px 0px 0px;
     vertical-align: middle;
 }
+
+.main-toolbar .search-criteria .btn-group .btn i {
+    display: none;
+}
+
+.main-toolbar .search-criteria .btn-group .btn.active i {
+    display: inline-block;
+    *display: inline;
+}
+
 
 .main-toolbar .search-criteria-buttons {
     clear:  both;
     padding: 0px;
 }
 
-.main-toolbar .search-criteria-buttons .btn.active {
-    border: 1px solid #AAA;
+/*
+.main-toolbar .search-criteria-buttons .btn-group .btn {
+    border-right: 1px solid #AAA;
 }
+
+.main-toolbar .search-criteria-buttons .btn-group > .btn:last-child {
+    border-right: 0px solid #AAA;
+}
+
+.main-toolbar .search-criteria-buttons .btn-group .btn.active,
+.main-toolbar .search-criteria-buttons .btn-group .btn:active {
+    background-image: none;
+    outline: 0;
+    -webkit-box-shadow: none;
+       -moz-box-shadow: none;
+            box-shadow: none;
+}
+
+.main-toolbar .search-criteria-buttons .btn-group {
+    border: 1px solid #AAA;
+    border-bottom-left-radius: 4px;
+        -webkit-border-bottom-left-radius: 4px;
+        -moz-border-radius-bottomleft: 4px;
+    border-top-left-radius: 4px;
+        -webkit-border-top-left-radius: 4px;
+        -moz-border-radius-topleft: 4px;
+    border-bottom-right-radius: 4px;
+            -webkit-border-bottom-right-radius: 4px;
+            -moz-border-radius-bottomright: 4px;
+    border-top-right-radius: 4px;
+        -webkit-border-top-right-radius: 4px;
+        -moz-border-radius-topright: 4px;
+}
+
+.main-toolbar .search-criteria-buttons .btn-group {
+
+
+} */
+
+/*
+.main-toolbar .search-criteria-buttons .btn {
+    background-color: #e6e6e6;
+}
+
+.main-toolbar .search-criteria-buttons .btn.active {
+    border: 1px solid #CCC;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}*/
 
 .menu-item-check {
     width: 20px;
+}
+
+.nav.navbar-thin {
+    padding: 0px 40px;
+}
+
+.nav.navbar-thin > li > a {
+    color: silver;
+    height: 25px;
+    padding: 3px 10px 3px 10px;
+    text-shadow: none;
+}
+
+.nav.navbar-thin > li > a:hover {
+    color: white;
 }
 
 .search-criteria .nav.btn-group .dropdown span {
