Reorganizing handlebars templates, working on form UI

--- a/web/src/main/webapp/static/js/templates/field-checkbox-layout.hbs
+++ b/web/src/main/webapp/static/js/templates/field-checkbox-layout.hbs
@@ -1,8 +1,8 @@
 <div class="field-layout-example">
 	<div class="control-group">
-		<label for="field-label"><input type="text" class="field-label-input unfocused empty" placeholder="Enter a label" maxlength="100"></input></label>
+		<label><input type="text" class="field-label-input unfocused empty" placeholder="Enter a label" maxlength="100"/></label>
 		<div class="controls">
-			<input type="checkbox" class="field-input field-checkbox" name="{{name}}"></input>&nbsp;<input type="text" class="input-small field-label-input unfocused after-checkbox" placeholder="Text" maxlength="100"></input>
+			<input type="checkbox" class="field-input field-checkbox" name="{{name}}"/>&nbsp;<input type="text" class="input-small field-label-input unfocused after-checkbox" placeholder="Text" maxlength="100"></input>
 		</div>
 	</div>
 </div>
