--- a/web/src/main/webapp/static/js/templates/form/section.hbs
+++ b/web/src/main/webapp/static/js/templates/form/section.hbs
@@ -1,9 +1,9 @@
-<div id="{{id}}" class="section {{#if selected}}selected{{/if}} {{#if editable}}selectable{{/if}}">
-    <div class="section-header">
-        <h3>{{label}}</h3>
-        {{#if description}}
-        <div class="directions">{{description}}</div>
-        {{/if}}
-    </div>
-    <div class="section-content"></div>
+<div class="section-header">
+    <h3>{{title}}</h3>
+    {{#if description}}
+    <p class="lead">{{description}}</p>
+    {{/if}}
+</div>
+<div class="section-content">
+
 </div>
