--- a/web/src/main/webapp/static/js/templates/form/form.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form.hbs
@@ -1,6 +1,9 @@
 {{#with screen}}
-    <h1>{{title}}</h1>
+    <h2>{{title}}</h2>
     <div class="screen">
+        <ul class="sections">
 
+
+        </ul>
     </div>
 {{/with}}
