--- a/web/src/main/webapp/static/js/templates/form/field-textarea.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-textarea.hbs
@@ -1,1 +1,13 @@
-Textarea
+{{#if label}}
+<label for="{{fieldId}}">{{label}}</label>
+{{/if}}
+<textarea id="{{fieldId}}" name="{{name}}" maxlength="{{maxValueLength}}" {{#if defaultValue}}placeholder="{{defaultValue}}"{{/if}}>
+</textarea>
+{{#if messages}}
+{{#each messages}}
+<div class="alert fade in alert-{{type}}">
+    <button type="button" class="close" data-dismiss="alert">×</button>
+    {{text}}
+</div>
+{{/each}}
+{{/if}}
