Developing form user interface to handle basic wizard steps, with visibility constraints

--- a/web/src/main/webapp/static/js/templates/form/field-radio.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-radio.hbs
@@ -7,7 +7,8 @@
     <input type="radio"
            name="{{../name}}"
            value="{{value}}"
-    {{#if required}}required{{/if}}
+        {{#if ../required}}required{{/if}}
+        {{#if selected}}checked{{/if}}
     /> {{label}}
 </label>
 {{/each}}
