--- a/web/src/main/webapp/static/js/templates/form/form.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form.hbs
@@ -1,6 +1,6 @@
 {{#with screen}}
     <h2>{{title}}</h2>
-    <div class="screen">
+    <div class="screen" id="{{screenId}}">
         <ul class="sections">
 
 
