--- a/web/src/main/webapp/static/js/templates/form/field-checkbox.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-checkbox.hbs
@@ -7,8 +7,8 @@
             <input type="checkbox"
                    name="{{../name}}"
                    value="{{value}}"
-                    {{#if required}}required{{/if}}
-                    /> {{label}}
+                    {{#if ../required}}required{{/if}}/> {{label}}
+                    {{#if selected}}checked{{/if}}
         </label>
     {{/each}}
 {{/if}}
