Clean up form user interface, added groupings to more cleanly handle review sections

--- a/web/src/main/webapp/static/js/templates/form/field-checkbox.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-checkbox.hbs
@@ -7,7 +7,7 @@
             <input type="checkbox"
                    name="{{name}}"
                    value="{{value}}"
-                    {{#if ../required}}required{{/if}}/> {{label}}
+                    {{#if ../required}}class="required"{{/if}}/> {{label}}
                     {{#if selected}}checked{{/if}}
         </label>
     {{/each}}
