--- a/web/src/main/webapp/static/js/templates/form/field-textarea.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-textarea.hbs
@@ -1,7 +1,9 @@
 {{#if label}}
 <label for="{{fieldId}}">{{label}}</label>
 {{/if}}
-<textarea id="{{fieldId}}" name="{{name}}" maxlength="{{maxValueLength}}" {{#if defaultValue}}placeholder="{{defaultValue}}"{{/if}}>
+<textarea id="{{fieldId}}" name="{{name}}" maxlength="{{maxValueLength}}"
+{{#if defaultValue}}placeholder="{{defaultValue}}"{{/if}}
+{{#if required}}class="required"{{/if}}
 </textarea>
 {{#if messages}}
 {{#each messages}}
