--- a/web/src/main/webapp/static/js/templates/form/form.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form.hbs
@@ -1,8 +1,9 @@
 {{#with screen}}
-    <h2>{{title}}</h2>
+    <h1>{{title}}</h1>
+    {{#breadcrumb groupings}}{{/breadcrumb}}
     <div class="screen" id="{{screenId}}">
+        <div class="screen-header"></div>
         <ul class="sections">
-
 
         </ul>
     </div>
