--- a/web/src/main/webapp/static/js/templates/form/section.hbs
+++ b/web/src/main/webapp/static/js/templates/form/section.hbs
@@ -7,6 +7,8 @@
 <div class="section-content">
 
 </div>
-<div class="section-buttons">
+<div class="section-footer">
+    <div class="section-buttons">
 
+    </div>
 </div>
