--- a/web/src/main/webapp/static/js/templates/form/field-textbox.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-textbox.hbs
@@ -10,12 +10,10 @@
        {{#if required}}class="required"{{/if}}
        {{#if customValidity}}oninvalid="setCustomValidity('{{customValidity}}')"{{/if}}
        {{#if pattern}}pattern="{{pattern}}"{{/if}}
-       {{#if defaultValue}}placeholder="{{defaultValue}}"{{/if}} />
+       {{#if defaultValue}}placeholder="{{defaultValue}}"{{/if}}
+       {{#if value}}value="{{value}}"{{/if}}/>
 {{#if messages}}
 {{#each messages}}
-<div class="alert fade in alert-{{type}}">
-    <button type="button" class="close" data-dismiss="alert">×</button>
-    {{text}}
-</div>
+    <span class="help-inline generated">{{text}}</span>
 {{/each}}
 {{/if}}
