Refactoring buttons from section to grouping

--- a/web/src/main/webapp/static/js/templates/form/form.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form.hbs
@@ -6,5 +6,10 @@
         <ul class="sections">
 
         </ul>
+        <div class="screen-footer">
+            <ul class="screen-buttons">
+
+            </ul>
+        </div>
     </div>
 {{/with}}
