--- a/web/src/main/webapp/static/js/templates/form/field-checkbox.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-checkbox.hbs
@@ -13,10 +13,7 @@
     {{/each}}
 {{/if}}
 {{#if messages}}
-    {{#each messages}}
-        <div class="alert fade in alert-{{type}}">
-            <button type="button" class="close" data-dismiss="alert">×</button>
-            {{text}}
-        </div>
-    {{/each}}
+{{#each messages}}
+<span class="help-inline generated">{{text}}</span>
+{{/each}}
 {{/if}}
