--- a/web/src/main/webapp/static/js/templates/form/field-file.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-file.hbs
@@ -13,9 +13,6 @@
 {{#if defaultValue}}placeholder="{{defaultValue}}"{{/if}} />
 {{#if messages}}
 {{#each messages}}
-<div class="alert fade in alert-{{type}}">
-    <button type="button" class="close" data-dismiss="alert">×</button>
-    {{text}}
-</div>
+<span class="help-inline generated">{{text}}</span>
 {{/each}}
 {{/if}}
