--- a/web/src/main/webapp/static/js/templates/form/field-listbox.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-listbox.hbs
@@ -19,9 +19,6 @@
 </select>
 {{#if messages}}
 {{#each messages}}
-<div class="alert fade in alert-{{type}}">
-    <button type="button" class="close" data-dismiss="alert">×</button>
-    {{text}}
-</div>
+<span class="help-inline generated">{{text}}</span>
 {{/each}}
 {{/if}}
