Adding anonymous form submission capability

--- a/web/src/main/webapp/static/js/templates/form/button.hbs
+++ b/web/src/main/webapp/static/js/templates/form/button.hbs
@@ -1,1 +1,1 @@
-<button class="btn btn-large" role="button" type="{{type}}" value="{{value}}">{{label}}</button>
+<button class="btn btn-large" role="button" type="{{type}}" value="{{value}}" alt="{{alt}}">{{label}}</button>
