--- a/web/src/main/webapp/static/js/templates/form/button-link.hbs
+++ b/web/src/main/webapp/static/js/templates/form/button-link.hbs
@@ -1,1 +1,1 @@
-<a class="btn btn-large" role="button" href="{{link}}">{{label}}</a>
+<a class="btn btn-large" role="button" href="{{link}}" alt="{{alt}}">{{label}}</a>
