Form building now model syncable

--- a/web/src/main/webapp/static/js/templates/form/form.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form.hbs
@@ -1,3 +1,4 @@
+{{#if screen}}
 {{#with screen}}
     <h1>{{title}}</h1>
     {{#breadcrumb groupings}}{{#url "step"}}{{/url}}{{/breadcrumb}}
@@ -10,29 +11,11 @@
     <div class="screen" id="{{screenId}}">
         <div class="screen-header"></div>
         <div class="screen-content">
-            <!--<ul class="sections">-->
-                <!--{{#each sections}}-->
-                    <!--<li class="section" id="{{sectionId}}">-->
-                        <!--<div class="section-header">-->
-                            <!--<h3>{{title}}</h3>-->
-                            <!--{{#if description}}-->
-                            <!--<p class="lead">{{description}}</p>-->
-                            <!--{{/if}}-->
-                        <!--</div>-->
-                        <!--<div class="section-content">-->
 
-                        <!--</div>-->
-                    <!--</li>-->
-                <!--{{/each}}-->
-            <!--</ul>-->
         </div>
-        <!--<ul class="sections">-->
-
-        <!--</ul>-->
         <div class="screen-footer">
-            <ul class="screen-buttons">
 
-            </ul>
         </div>
     </div>
 {{/with}}
+{{/if}}
