Standardizing around a single layout

--- a/web/src/main/webapp/static/js/templates/runtime/search.hbs
+++ b/web/src/main/webapp/static/js/templates/runtime/search.hbs
@@ -1,30 +1,32 @@
-<div>
-    <ul class="search-criteria">
-        <li class="nav">
-            <div class="btn-group">
-                <input title="Search by keyword" role="" class="searchField" name="keyword" placeholder="Search" id="keyword" type="text">
-            </div>
-        </li>
-        <li class="nav">
-            <div>
-                <button class="btn" role="button" id="instanceSearchButton" type="submit">&nbsp;&nbsp;<i class="icon-search"></i>&nbsp;&nbsp;</button>
-            </div>
-        </li>
-        <!--<li class="nav btn-group">
-            <a class="btn btn-link" href="#clear" role="button" id="instanceClearButton" type="button">Clear</a>
-        </li>-->
-        <li class="nav pull-right">
-            <a class="btn" href="#export" title="Export all results" id="exportButton" type="button"><i class="icon-download-alt"></i> Export</a>
-        </li>
-    </ul>
-</div>
-<div>
-    <ul class="search-criteria-buttons">
-        <li class="nav">
-            <div class="status-filter-container"></div>
-        </li>
-        <li class="nav">
-            <div class="process-filter-container"></div>
-        </li>
-    </ul>
-</div>
+<form id="search-form" action="" method="GET">
+    <div>
+        <ul class="search-criteria">
+            <li class="nav">
+                <div class="btn-group">
+                    <input title="Search by keyword" role="" class="searchField" name="keyword" placeholder="Search" id="keyword" type="text">
+                </div>
+            </li>
+            <li class="nav">
+                <div>
+                    <button class="btn" role="button" id="instanceSearchButton" type="submit">&nbsp;&nbsp;<i class="icon-search"></i>&nbsp;&nbsp;</button>
+                </div>
+            </li>
+            <!--<li class="nav btn-group">
+                <a class="btn btn-link" href="#clear" role="button" id="instanceClearButton" type="button">Clear</a>
+            </li>-->
+            <li class="nav pull-right">
+                <a class="btn" href="#export" title="Export all results" id="exportButton" type="button"><i class="icon-download-alt"></i> Export</a>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <ul class="search-criteria-buttons">
+            <li class="nav">
+                <div class="status-filter-container"></div>
+            </li>
+            <li class="nav">
+                <div class="process-filter-container"></div>
+            </li>
+        </ul>
+    </div>
+</form>
