--- a/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
@@ -1,6 +1,6 @@
 <form id="search-form" action="" method="GET">
     <div>
-        <ul class="search-criteria">
+        <ul class="toolbar-items">
             <li class="nav">
                 <div class="btn-group">
                     <input title="Search by keyword" role="" class="searchField" name="keyword" placeholder="Search" id="keyword" type="text">
@@ -20,7 +20,7 @@
         </ul>
     </div>
     <div>
-        <ul class="search-criteria-buttons">
+        <ul class="toolbar-items-buttons">
             <li class="nav">
                 <div class="status-filter-container"></div>
             </li>
