--- a/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
@@ -3,7 +3,7 @@
         <a class="btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="icon-comment"></i></a>
     </li>
     <li class="nav">
-        <a class="btn" href="#attachments" title="View notes" id="attachmentsButton" type="button"><i class="icon-folder-open"></i>&nbsp;0</a>
+        <button class="btn" id="attachments-button" title="View comments and attachments"><i class="icon-folder-open"></i>&nbsp;0</button>
     </li>
     <li class="nav">
         <button class="btn" id="back-button"><i class="icon-arrow-left"></i></button>
@@ -13,7 +13,7 @@
 <div id="comment-dialog" class="modal hide fade">
     <div class="modal-body">
         <textarea class="input-block-level" placeholder="Enter a comment" name="comment" id="attach-comment" rows="4"></textarea>
-        <button class="btn" id="attachment-button"><i class="icon-file"></i></button>
+        <button class="btn" id="file-button"><i class="icon-file"></i></button>
         <input type="file" name="attachment" class="attach-file hide"/>
     </div>
     <div class="modal-footer">
