--- a/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
@@ -1,12 +1,15 @@
-<ul class="toolbar-items pull-right">
+<ul class="toolbar-items">
     <li class="nav">
+        <button class="btn" id="suspend-button" title="Suspend process"><i class="icon-off"></i></button>
+        <button class="btn" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process"><i class=" icon-trash"></i></button>
+
+    </li>
+    <li class="nav pull-right">
         <a class="btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="icon-comment"></i></a>
-    </li>
-    <li class="nav">
+
         <button class="btn" id="attachments-button" title="View comments and attachments"><i class="icon-folder-open"></i>&nbsp;0</button>
-    </li>
-    <li class="nav">
-        <button class="btn" id="back-button"><i class="icon-arrow-left"></i></button>
+
+        <button class="btn" id="back-button" title="Return to task list"><i class="icon-arrow-left"></i></button>
     </li>
 </ul>
 
@@ -19,6 +22,24 @@
     <div class="modal-footer">
         <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
         <button type="button" id="attach-button" class="btn btn-primary">Attach</button>
+    </div>
+</div>
+
+<div id="delete-dialog" class="modal hide fade">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Are you sure you want to delete this process?</h3>
+    </div>
+    <div class="modal-body">
+        <div class="alert alert-error">
+            <p>Deleting a process is permanent and cannot be reversed.</p>
+            <p>If you simply want to prevent a process from continuing to execute, then it's generally safer to suspend it.</p>
+        </div>
+        <textarea class="input-block-level" placeholder="Enter a reason" name="reason" id="delete-reason" rows="4"></textarea>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+        <button type="button" id="delete-button" class="btn btn-danger">Delete</button>
     </div>
 </div>
 
